--- a/css/index.css
+++ b/css/index.css
@@ -10,14 +10,19 @@ body {
 }
 
 button {
-    padding-bottom: 10px;
-    margin-bottom: 10px;
+    padding: 10px;
+    margin: 10px;
     display: block;
 }
 
 h1, h2, h3, h4, h5 {
     text-align: center;
     text-decoration: none;
+}
+
+p {
+    padding: 15px;
+    margin: 15px;
 }
 
 p .lead {
@@ -29,11 +34,9 @@ p .lead {
 }
 
 .market-item {
-    border: solid 0.3px;
-    border-color: black;
-    height: 40% !important;
-    margin: 0;
-    padding: 0;
+    height: 40%;
+    margin: 3px;
+    padding: 3px;
 }
 
 .market-item-small {
