--- a/css/index.css
+++ b/css/index.css
@@ -3,16 +3,21 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
+html,body { height: 100%; }
 
 body {
     background: light-grey;
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
 button {
     padding: 10px;
     margin: 10px;
     display: block;
+}
+
+button:before {
+    padding: 10px;
+    margin: 10px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -30,18 +35,41 @@ p .lead {
     display: inline;
 }
 .page-header {
-    display: inline;
+    top: 0;
+    height: 50px;
+    clear: both;
+}
+
+button {
+    float: right;
+}
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -4em;
+}
+
+#posts {
+    position: absolute;
+    top: 150px;
+    left:0px;
+    right:0px;
+    bottom:0px;
+    overflow-y: scroll;
 }
 
 .market-item {
-    height: 40%;
+    height: 100%;
     margin: 0;
     padding: 0;
+    z-index: 0;
 }
 
 .market-item-small {
 	width: 33%;
-    height: 40% !important;
+    height: 70% !important;
 }
 
 .market-item-medium {
@@ -50,15 +78,12 @@ p .lead {
 
 .market-item-small img {
 	height: 100%;
+    z-index: 0;
 }
 
 .market-item-small img {
     max-height: 50%;
     width: 100%;
-}
-
-footer {
-    margin: 50px 0;
 }
 
 #productSellerContent img {
@@ -87,4 +112,8 @@ input {
     display: block;
     padding: 15px 20px 15px 10px;
     width: 40%;
+}
+
+footer, .push {
+    height: 4em;
 }
