--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,16 +3,28 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
-html,body { height: 100%; }
-
+html,body { height: 100%; overflow-y: scroll;  }
+* { box-sizing: border-box; }
 body {
-    background: light-grey;
+    background: none;
 }
 
 button {
     padding: 10px;
     margin: 20px 0 20px 0;
     display: block;
+}
+
+nav button {
+    float: right;
+}
+
+button .offer {
+    float: left;
+}
+
+button .sell {
+    float: right;
 }
 
 h1, h2, h3, h4, h5 {
@@ -35,17 +47,12 @@ p .lead {
     clear: both;
 }
 
-button {
-    float: right;
-}
-
-
 /* STUFF ON THE MAIN FEED */
 .wrapper {
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin: 0 auto -4em;
+    margin: 0 auto -2em;
 }
 
 
@@ -58,32 +65,42 @@ button {
     overflow-y: scroll;
 }
 
-.market-item {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    z-index: 0;
+
+/* ---- grid ---- */
+
+.grid {
+  max-width: 100%
+
 }
 
+/* clearfix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
 
-.market-item-small {
-	width: 25%;
-    height: 100% !important;
 }
 
-.market-item-medium {
-	width: 33%;
+/* ---- grid-item ---- */
+
+.grid-item {
+  width: 350px;
+  height: 380px;
+  padding: 5px;
+  margin: 5px;
+  float: left;
+  border: .5px solid black;
+  border-color: hsla(0, 0%, 0%, 0.5);
+  border-radius: 5px;
 }
 
-.market-item-small img {
-	height: 100%;
-    z-index: 0;
+/* ---- .grid-item ---- */
+
+.grid-item img {
+  display: block;
+  max-width: 100%;
 }
 
-.market-item-small img {
-    max-height: 50%;
-    width: 100%;
-}
 
 /* STUFF ON THE SELL ITEM MODAL*/
 
@@ -118,7 +135,7 @@ input {
 /* FOOTER */
 
 footer, .push {
-    height: 4em;
+    height: 2em;
     color: black;
 }
 
