--- a/public/css/index.css
+++ b/public/css/index.css
@@ -48,13 +48,6 @@ p .lead {
 }
 
 /* STUFF ON THE MAIN FEED */
-.wrapper {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -2em;
-}
-
 
 #posts {
     position: absolute;
@@ -70,24 +63,24 @@ p .lead {
 
 .grid {
   max-width: 100%
-
 }
 
 /* clearfix */
-.grid:after {
+.grid:after,
+.grid-item:after {
   content: '';
   display: block;
   clear: both;
-
 }
 
 /* ---- grid-item ---- */
 
 .grid-item {
+  text-align: center;
   width: 350px;
-  height: 380px;
-  padding: 5px;
-  margin: 5px;
+  height: 420px;
+  padding: 2px;
+  margin: 2px;
   float: left;
   border: .5px solid black;
   border-color: hsla(0, 0%, 0%, 0.5);
@@ -98,13 +91,16 @@ p .lead {
 
 .grid-item img {
   display: block;
-  max-width: 100%;
+  padding-left: 7px;
+  width: 100%;
+  height: 230px;
 }
 
 
 /* STUFF ON THE SELL ITEM MODAL*/
 
 #productSellerContent img {
+    display: block;
     max-height: 100%;
     max-width: 100%;
 }
@@ -112,8 +108,8 @@ p .lead {
 #productImageView {
     padding: 20px;
     margin: 20px;
-    height: 40%;
-    width: 40%;
+    height: 350px;
+    width: 380px;
 }
 
 #productImageView img {
