layout and styling changes to small product item component

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,14 +75,15 @@ a {
 .product-item-small {
   border: 1px solid #f2f2f2;
   border-radius: 4px;
-  height: 400px;
+  height: 480px;
   width: 300px;
   display: inline-block;
   margin-top: 15px;
   margin-left: 15px;
 }
 
-.product-item-medium {
+
+/*.product-item-medium {
   border: 1px solid #f2f2f2;
   padding: 25px;
   border-radius: 4px;
@@ -91,16 +92,32 @@ a {
   display: inline-block;
   margin-top: 10px;
   margin-left: 15px;
+}*/
+
+.product-item-small .tags {
+  text-align: center;
+  margin: 18px auto 0 auto;
+}
+
+.product-item-small .tags > a {
+  font-weight: 300;
+  font-size: 16px;
+  padding: 3px;
 }
 
 .product-item-small .product-item-small-info {
-  padding: 15px auto;
-  margin: 15px auto;
-  display: block;
-  height: auto;
+  position: absolute;
+  bottom: 0;
+  padding: 0;
 }
 
-.product-item-medium .product-item-medium-info {
+.product-item-small .product-item-small-info p {
+  color: #999999;
+  font-size: 14px;
+  padding: 0 23px 3px 23px;
+}
+
+/*.product-item-medium .product-item-medium-info {
   padding-left: 15px;
   display: block;
   position: absolute;
@@ -108,83 +125,73 @@ a {
   top: 5%;
   width: 250px;
   height: 400px;
-}
+}*/
+
 
 .product-item-small .product-item-media-small {
-  width: auto;
-  max-width: 200px;
-  height: 200px;
-  margin: 0 auto;
   display: block;
-  clear: both;
-  margin-top: 32px;
+  height: 280px;
+  margin: 0 auto;
+  padding: 20px;
+  position: inherit;
 }
 
-.product-item-medium .product-item-media-medium {
+.product-item-small .product-item-media-small img {
+  zoom: 2;
+  display: block;
+  margin: 0 auto;
+
+  height: auto;
+  max-height: 100%;
+
+  width: auto;
+  max-width: 100%;
+  clear: both;
+
+  padding: auto;
+}
+
+
+
+
+/*.product-item-medium .product-item-media-medium {
   width: 200px;
   height: 200px;
   display: block;
   clear: both;
-}
-
+}*/
 
 .bottom-stick .product-item-price-small {
-  bottom: 3%;
-  left: 5%;
+  bottom: 1%;
+  left: 1%;
 }
 
-.bottom-stick .product-item-price-medium {
+/*.bottom-stick .product-item-price-medium {
   bottom: 3%;
   left: 45%;
 }
 
 .bottom-stick .product-item-price-medium {
   right: 20%;
-}
+}*/
 
-.product-item-small .product-item-small-info p {
-  color: #999999;
-  font-size: 14px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
+
 
 .avatar-info {
-  height: 50px;
-  width: 200px;
-  margin: 0 auto;
+  height: 60px;
+  width: 100%;
 }
 
 .small-avatar {
   width: 45px;
   height: 45px;
   border-radius: 50%;
-  float: right;
-  margin-right: 5px;
-  padding: 3px;
-}
-
-.medium-avatar {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  float: right;
-  margin-right: 5px;
-  padding: 3px;
+  float: left;
 }
 
 .small-avatar-name {
-  display: inline-block;
   float: right;
-  color: #999999;
-  margin: 17px 7px;
-}
-
-.medium-avatar-name {
-  display: inline-block;
-  float: right;
-  color: #999999;
-  margin: 32px 7px;
+  margin: 17px 3px;
 }
 
 .small-avatar-name:hover,
@@ -192,6 +199,27 @@ a {
   color: black;
   cursor: pointer;
 }
+
+
+/*.medium-avatar {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  float: right;
+  margin-right: 5px;
+  padding: 3px;
+}*/
+
+
+
+/*.medium-avatar-name {
+  display: inline-block;
+  float: right;
+  color: #999999;
+  margin: 32px 7px;
+}*/
+
+
 
 /* ================== UPVOTE BUTTON CSS ================== */
 
@@ -202,13 +230,25 @@ a {
   text-align: center;
   border-radius: 4px;
   display: block;
-  right: 8.5%;
   position: absolute;
-  top: 15%;
+  right: 1%;
+  bottom: 0;
+  color: #5e9aee;
+}
+
+.upvote-button.upvote-button-small {
+  margin: 5px;
+  padding: 4px;
+}
+
+.upvote-button.upvote-button-medium {
+  margin: 0;
+  padding: 0;
 }
 
 .upvote-button:hover {
-  color: #5e9aee;
+  background-color: #999999;
+  font-weight:bolder;
 }
 
 .upvote-button.active {
@@ -222,7 +262,7 @@ a {
 
 /*------------------------------ NAVBAR ------------------------------*/
 .navbar {
-  background-color: #B3D7E3;
+  background-color: white;
   box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.2);
 }
 .logo {
