--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,6 +88,7 @@ a {
   position: absolute;
   bottom: 0;
   margin-top: 20px;
+  width: 100%;
 }
 
 .product-item-small .product-item-small-info h2 {
