added react css transitions for fade

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -820,3 +820,41 @@ section.post-section {
   bottom: 40px;
   margin: 0;
 }
+
+/*------------------------------ REACT CSS TRANSITION ------------------------------*/
+
+.post-fade-appear {
+   opacity: 0.01;
+}
+
+.post-fade-appear.post-fade-appear-active {
+   opacity: 1;
+   transition: opacity 500ms ease-in;
+}
+
+.post-fade-leave {
+  opacity: 1;
+  transition: opacity 1s ease-in;
+}
+
+.post-fade-leave.post-fade-leave-active {
+  opacity: 0.01;
+}
+
+.fade-enter {
+  opacity: 0.01;
+  transition: opacity 500ms ease-in;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+}
+
+.fade-leave {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.fade-leave.fade-leave-active {
+  opacity: 0.01;
+}
