media uploads and a bit of input sanity checking.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -287,7 +287,6 @@ a, a:hover, a:active, a:visited {
 
 
 .product-item-large .product-item-media-large img {
- zoom: 2;
  display: inline-block;
  margin: 0 auto;
 
@@ -516,6 +515,20 @@ button:hover {
 	background-color: white;
   margin: 0 auto;
   position: relative;
+  overflow-y: scroll;
+}
+
+.post-popup .imgPreview {
+  height: 300px;
+}
+
+.post-popup .imgPreview img {
+  padding: 10px;
+  margin-top: 20px;
+  max-height: 100%;
+  max-width: 30%;
+  float: left;
+  border-radius: 18px;
 }
 
 .popup-close {
