--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,7 +155,7 @@ a, a:hover, a:active, a:visited {
 .product-item-small .product-item-media-small {
   display: block;
   height: 250px;
-  padding: 2px;
+  padding: 0;
 }
 
 .product-item-small .product-item-media-small img {
@@ -516,7 +516,14 @@ button:hover {
   margin: 0 auto;
   position: relative;
   overflow-y: scroll;
+  height: 300px;
 }
+
+.post-popup #categorySelection,
+.post-popup #urgencyInfo  {
+  height: 300px;
+}
+
 
 .post-popup .imgPreview {
   height: 300px;
@@ -600,7 +607,6 @@ button.post-product-btn:hover {
 
 .post-popup > section {
 	font-size: 14px;
-	border: 1px solid #f2f2f2;
 	padding: 20px 0;
 	height: 70%;
 	color: #928B8B;
