--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -913,6 +913,9 @@ img.shuffle-btn {
 
 /* entire container, keeps perspective */
 .flip-container-large, .flip-container-medium, .flip-container-small {
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -o-perspective: 1000;
 	perspective: 1000px;
   margin-top: 15px;
   margin-left: 7.5px;
@@ -921,6 +924,9 @@ img.shuffle-btn {
 	/* flip the pane when hovered */
 	.flip-container:hover .flip-product, .flip-container.hover .flip-product {
 		transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
 	}
 
 .flip-container-large, .front-large, .back-large {
@@ -939,8 +945,16 @@ img.shuffle-btn {
 
 /* flip speed goes here */
 .flip-product {
+
 	transition: 0.6s;
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -o-transition: 0.6s;
+
 	transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
 
 	position: relative;
 }
@@ -948,6 +962,9 @@ img.shuffle-btn {
 /* hide back of pane during swap */
 .front, .back {
 	backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
 
 	position: absolute;
 	top: 0;
@@ -959,6 +976,9 @@ img.shuffle-btn {
 	z-index: 2;
 	/* for firefox 31 */
 	transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
   margin: 0 auto;
   position: relative;
 }
@@ -966,4 +986,7 @@ img.shuffle-btn {
 /* back, initially hidden pane */
 .back {
 	transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
 }
